# sensorflex-python

./: .gitignore  README.md  pyproject.toml
examples/: pyproject.toml
examples/ar/: ar_foundation.py  aruco_tracking.py  calibrate_web_cli.py  make_marker_img_cli.py
examples/cli/: simple_cli_usage.sh
examples/python/: hello_sensorflex.py  listener_graph.py  multi_process_graph.py  simple_async_future.py  simple_compute_graph.py  simple_pipeline.py  simple_server_usage.py  simple_syntax.py  simple_webcam.py  simple_webrtc.py
examples/python/web/webrtc_test/: index.html
examples/python/webrtc/: simple_webrtc.py
examples/python/websocket/: distributed.py  perf_ws.py  ping_pong.py
examples/simple/: hello_sensorflex.py  multi_process_graph.py  simple_async_future.py  simple_compute_graph.py  simple_pipeline.py  simple_router.py  simple_syntax.py  simple_webcam.py
examples/webrtc/: simple_webrtc.py
examples/websocket/: distributed.py  ping_pong.py  remote_webcam.py  use_msgspec.py
src/sensorflex/: __init__.py
src/sensorflex/cli/: _cli.py
src/sensorflex/core/: __init__.py  _async.py  _graph.py  _service.py  _types.py  _visualization.py
src/sensorflex/core/cli/: _cli.py
src/sensorflex/core/flow/: __init__.py  _graph.py  _node.py  _operator.py  _session.py
src/sensorflex/core/io/: __init__.py  _file.py  _webcam.py  _webrtc_old.py
src/sensorflex/core/runtime/: __init__.py  _flow.py  _graph.py  _node.py
src/sensorflex/utils/: logging.py
