[project]
name = "sensorflex"
version = "0.1.4"
license = "Apache-2.0"
description = "Modern real-time sensor compute and data management."
authors = [{ name = "Yiqin Zhao", email = "yzigm@rit.edu" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
libnet = ["websockets (>=15.0.1,<16.0.0)", "msgspec (>=0.20.0,<0.21.0)"]

libwebrtc = ["aiortc (>=1.10.0,<2.0.0)", "av (>=13.0.0,<17.0.0)"]

libvis = ["rerun-sdk"]

libar = ["mediapipe>=0.10.14,<0.11.0"]

libcv = ["pillow (>=11.0.0,<13.0.0)", "opencv-python (>=4.12.0.88,<5.0.0.0)"]

all = [
    "aiortc (>=1.10.0,<2.0.0)",
    "av (>=13.0.0,<17.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "msgspec (>=0.20.0,<0.21.0)",
    "rerun-sdk",
    "pillow (>=9.0.0,<13.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]  # I = import sorting
