[project]
name = "sensorflex-examples"
version = "0.1.0"
description = ""
authors = [{ name = "Yiqin Zhao", email = "yiqinzhao@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sensorflex @ file:///Users/yzigm/Desktop/SensorFlex/sensorflex-python",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
sensorflex = { develop = true }
